force-app/main/objects/Order.object
<CustomObject>
    <fields>
        <fullName>Activation_Offset__c</fullName>
        <label>Activation Offset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BU__c</fullName>
        <formula>TEXT(Account.BU__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booked_Elsewhere__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Booked Elsewhere</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Booking_Date__c</fullName>
        <label>Booking Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Cancellation_Reason_Additional_Required__c</fullName>
        <label>Cancellation Reason Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cancellation_Reason__c</fullName>
        <label>Cancellation Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Budget Limitations</fullName>
                </value>
                <value>
                    <fullName>Contact Turnover</fullName>
                </value>
                <value>
                    <fullName>Incorrect Contact</fullName>
                </value>
                <value>
                    <fullName>M&amp;A Activity</fullName>
                </value>
                <value>
                    <fullName>Value Concerns</fullName>
                </value>
                <value>
                    <fullName>Finance Drop</fullName>
                </value>
                <value>
                    <fullName>Duplicate Opportunity</fullName>
                </value>
                <value>
                    <fullName>Invalid/market definitions</fullName>
                </value>
                <value>
                    <fullName>Cannot meet requirements</fullName>
                </value>
                <value>
                    <fullName>Cannot meet timescales</fullName>
                </value>
                <value>
                    <fullName>Qualified Out</fullName>
                </value>
                <value>
                    <fullName>Opportunity clean up</fullName>
                </value>
                <value>
                    <fullName>Expertise</fullName>
                </value>
                <value>
                    <fullName>Solution</fullName>
                </value>
                <value>
                    <fullName>Commercials</fullName>
                </value>
                <value>
                    <fullName>Service Failure</fullName>
                </value>
                <value>
                    <fullName>Debooking</fullName>
                </value>
                <value>
                    <fullName>RFP - SHL Qualified Out</fullName>
                </value>
                <value>
                    <fullName>Account Management / Client Relationship</fullName>
                </value>
                <value>
                    <fullName>Duplicate / Data clean</fullName>
                </value>
                <value>
                    <fullName>Customer Restructure</fullName>
                </value>
                <value>
                    <fullName>Customer No Interest   - Other</fullName>
                </value>
                <value>
                    <fullName>Customer Requirements</fullName>
                </value>
                <value>
                    <fullName>Customer Budget Limitations</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Contract Extension Requested</fullName>
                </value>
                <value>
                    <fullName>Sanctioned Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancellation_Sub_Reason__c</fullName>
        <label>Cancellation Sub Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Cancellation_Reason__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Capability</fullName>
                </value>
                <value>
                    <fullName>Functionality</fullName>
                </value>
                <value>
                    <fullName>ROI realized</fullName>
                </value>
                <value>
                    <fullName>Timescales</fullName>
                </value>
                <value>
                    <fullName>Content</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Payment Terms</fullName>
                </value>
                <value>
                    <fullName>GDPR</fullName>
                </value>
                <value>
                    <fullName>Reason</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                    <label>Duplicate Opportunity</label>
                </value>
                <value>
                    <fullName>Created in error</fullName>
                </value>
                <value>
                    <fullName>M&amp;A</fullName>
                </value>
                <value>
                    <fullName>Contact Churn</fullName>
                </value>
                <value>
                    <fullName>New contact</fullName>
                </value>
                <value>
                    <fullName>Dept Closure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Course_Booking__c</fullName>
        <formula>IF(CONTAINS(Opportunity.Opportunity_Nickname__c,&apos;Opportunity for Course Booking&apos;),
			RIGHT(Opportunity.Opportunity_Nickname__c, 9), &apos;&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Booking</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Daylight_End_Date_US_submission__c</fullName>
        <formula>DATETIMEVALUE(DATE(YEAR(DATEvalue(Submitted_to_OATs__c )),11,1)
+
( 7
-
CASE( MOD(DATE ( YEAR (DATEvalue(Submitted_to_OATs__c )),11,1) - DATE (1900,1,7),7) ,
0,7,MOD(DATE ( YEAR (DATEvalue(Submitted_to_OATs__c )),11,1) - DATE (1900,1,7),7))
)) + 6/24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Daylight End Date US(submission)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Daylight_Start_Date_US_Submission__c</fullName>
        <formula>DATETIMEVALUE(DATE(YEAR(DATEvalue(Submitted_to_OATs__c )),3,1)
+
( 14
-
CASE( MOD(DATE ( YEAR (DATEvalue(Submitted_to_OATs__c )),3,1) - DATE (1900,1,7),7) ,
0,7,MOD(DATE ( YEAR (DATEvalue(Submitted_to_OATs__c )),3,1) - DATE (1900,1,7),7))
)) + 7/24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Daylight Start Date US(Submission)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Invoice_Header_Count__c</fullName>
        <label>Invoice Header Count</label>
        <summaryForeignKey>Contract_Invoice_Header__c.Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LegacyOrder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LegacyOrder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MissingInfoOrdProd__c</fullName>
        <defaultValue>false</defaultValue>
        <description>will be marked true from backend if info around Use Case, Platform, Renewability is missing on Order Product</description>
        <label>MissingInfoOrdProd</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OAT_Email__c</fullName>
        <label>OAT Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Oats_Status__c</fullName>
        <label>OAT Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Queried</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Awaiting GST/VAT Info</fullName>
                </value>
                <value>
                    <fullName>Awaiting PO</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Under Legal Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offering_SolCap_BF_UsageAll__c</fullName>
        <description>This field on Order is Populated when an Order Item is or Updated for a change in Offering Detail, Basis of Fee, Solution Cap &amp; Usage Allowance.</description>
        <label>Offering SolCap BF UsageAll (for TC+)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Offering_with_Solution_Cap__c</fullName>
        <description>This field is Populated on OrderItem Creation &amp; Update (if there is change in Offering Detail or Solution Cap for the item)</description>
        <label>Offering with Solution Cap</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Order_Year__c</fullName>
        <label>Order Year</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Original_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Reduction/Variation Orders</relationshipLabel>
        <relationshipName>OriginalOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Billing_Frequency__c</fullName>
        <label>Product Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Bi-annual</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reduction_Order_Invoice_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reduction Order Invoice Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reduction_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to define whether order is reduction or not.</description>
        <label>Reduction order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rejection_Reason__c</fullName>
        <label>Rejection Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Signature lacks authority</fullName>
                </value>
                <value>
                    <fullName>Issues with SFDC Account</fullName>
                </value>
                <value>
                    <fullName>Incorrect evidence type</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_billing_frequency__c</fullName>
        <label>Service Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>25% up front, 50% on milestones, 25% on completion</fullName>
                </value>
                <value>
                    <fullName>100% Upfront</fullName>
                </value>
                <value>
                    <fullName>Invoice per milestone</fullName>
                </value>
                <value>
                    <fullName>Upon completion</fullName>
                </value>
                <value>
                    <fullName>Special Invoicing Instructions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Skip_Validation_Auto_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag used to skip validations for Auto Renewal Process.</description>
        <label>Skip Validation Auto Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_Account__c</fullName>
        <formula>IF((Account.Account_Number__c==&apos;D0263803&apos; || Account.Account_Number__c==&apos;D0263804&apos; || Account.Account_Number__c==&apos;D0408140&apos; || Account.Account_Number__c==&apos;D0408138&apos;), True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Special Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Submission_Offset__c</fullName>
        <label>Submission Offset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Submitted_to_OATs__c</fullName>
        <label>Submitted to OATs</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Unconfirmed_Sun_Order_Number__c</fullName>
        <label>Unconfirmed Sun Order Number</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Variation_Opportunity__c</fullName>
        <formula>Text(Opportunity.Variation_Opportunity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variation Order</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Variation_Reason__c</fullName>
        <formula>Text(Opportunity.Variation_Reason__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variation Reason</label>
        <type>Text</type>
    </fields>
</CustomObject>